STYLE: Fixed homepage image responsiveness and navbar on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,4 @@
 .navbar-lewagon {
-  height: 10rem;
   justify-content: space-between;
   background: $midnight-blue;
 }
@@ -12,7 +11,7 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 75px;
+  width: 50px;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -33,5 +32,5 @@
 
 .avatar {
   border: 2px solid #D39536;
-  width: 75px;
+  width: 50px;
 }
